Looking after the @

--- a/public_html/less/registration.less
+++ b/public_html/less/registration.less
@@ -36,16 +36,13 @@ body {
       outline: 0;
     }
   }
-  
+
   input {
     background-color: transparent;
     color: white;
-  }
-
-  #registration-form-name {
+    /* registration-form-name */
     font-weight: bold;
     font-size: 50px;
     width: 100%;
   }
 }
-
