--- a/public_html/css/registration.css
+++ b/public_html/css/registration.css
@@ -16,8 +16,7 @@ body {
 #registration-form input {
   background-color: transparent;
   color: white;
-}
-#registration-form #registration-form-name {
+  /* registration-form-name */
   font-weight: bold;
   font-size: 50px;
   width: 100%;
