--- a/public_html/css/registration.css
+++ b/public_html/css/registration.css
@@ -5,7 +5,7 @@ body {
   width: 700px;
   margin: 0 auto;
 }
-#registration-form * {
+#registration-form input {
   border: 0;
   margin: 0;
   padding: 0;
