--- a/public_html/less/registration.less
+++ b/public_html/less/registration.less
@@ -31,13 +31,17 @@
 
 body {
   background-color: gray;
+  font-family: 'ARS Maquette Pro Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #333;
 }
 
 #registration-form {
   width: 700px;
   margin: 0 auto;
 
-  * {
+  input {
     border: 0;
     margin: 0;
     padding: 0;
