--- a/public_html/zeta/view/registration/background_switcher.less
+++ b/public_html/zeta/view/registration/background_switcher.less
@@ -20,16 +20,15 @@
 }
 
 #first-time-background {
-  /*TODO: 100% width & height*/
-  width: 1080px;
-  height: 1920px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 
   .faces {
     width: 100%;
     height: 100%;
     position: relative;
-    /*TODO: background-size "cover" und onresize event*/
+    background-size: cover;
     &.scale {
       -webkit-transition: -webkit-transform 8.5s;
       -moz-transition: -moz-transform 8.5s;
