Animation stays always in the center.

--- a/public_html/zeta/view/registration/background_switcher.less
+++ b/public_html/zeta/view/registration/background_switcher.less
@@ -29,6 +29,8 @@
     height: 100%;
     position: relative;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     &.scale {
       -webkit-transition: -webkit-transform 8.5s;
       -moz-transition: -moz-transform 8.5s;
