Implemented "initiate_password_reset".

--- a/public_html/zeta/view/registration/background_switcher.less
+++ b/public_html/zeta/view/registration/background_switcher.less
@@ -36,7 +36,7 @@
       -moz-transition: -moz-transform 8.5s;
       -ms-transition: -ms-transform 8.5s;
       -o-transition: -o-transform 8.5s;
-      -transition:transform 8.5s;
+      transition: transform 8.5s;
       .scale(1.4);
     }
     &.fade-out {
